SET(CMAKE_INSTALL_PREFIX /home/ismael/h_test/)

SET(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}phaf/")

project(memmanager)
cmake_minimum_required(VERSION 3.11)

set(CURRENT_TARGET memmanager)

set(SOURCES src/memmanager.cpp)
set(HEADERS memmanager/include/memmanager.hpp)

add_library(${CURRENT_TARGET} SHARED ${SOURCES} ${HEADERS})
 
 target_include_directories(${CURRENT_TARGET}
    PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
    "$<INSTALL_INTERFACE:include>"
)

include(GNUInstallDirs)
install(TARGETS ${CURRENT_TARGET}
    EXPORT "${CURRENT_TARGET}Targets"
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(FILES 
    ${HEADERS} 
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(EXPORT "${CURRENT_TARGET}Targets"
        FILE "${CURRENT_TARGET}Targets.cmake"
        NAMESPACE "${CURRENT_TARGET}::"
        DESTINATION lib/cmake
)
